--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -2,13 +2,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>dao</artifactId>
 	<packaging>jar</packaging>
-	<version>1.3.1</version>
 	<name>Hibernate Generic DAO - DAO</name>
 	
 	<parent>
 		<artifactId>genericdao-parent</artifactId>
 		<groupId>com.googlecode.genericdao</groupId>
-		<version>1.3.1</version>
+		<version>1.3.1-SNAPSHOT</version>
+        <relativePath>../genericdao-parent/pom.xml</relativePath>
 	</parent>	
 	
 	<dependencies>
