--- a/genericdao-parent/pom.xml
+++ b/genericdao-parent/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.googlecode.genericdao</groupId>
     <artifactId>genericdao-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.1</version>
+    <version>1.3.1-SNAPSHOT</version>
 
     <name>Hibernate Generic DAO</name>
     <url>http://code.google.com/p/hibernate-generic-dao</url>
@@ -16,6 +16,11 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.test.failure.ignore>true</maven.test.failure.ignore>
+    </properties>
 
     <!-- For upload to Sonatype Open Source Maven staging Repo -->
     <parent>
@@ -69,6 +74,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
