--- a/search/pom.xml
+++ b/search/pom.xml
@@ -1,14 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.googlecode.genericdao</groupId>
 	<artifactId>search</artifactId>
 	<packaging>jar</packaging>
-	<version>1.3.1</version>
 	<name>Hibernate Generic DAO - Search</name>
 	<parent>
 		<artifactId>genericdao-parent</artifactId>
 		<groupId>com.googlecode.genericdao</groupId>
-		<version>1.3.1</version>
+		<version>1.3.1-SNAPSHOT</version>
+        <relativePath>../genericdao-parent/pom.xml</relativePath>
 	</parent>
 
 	<dependencies>
