--- a/genericdao-parent/pom.xml
+++ b/genericdao-parent/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.googlecode.genericdao</groupId>
     <artifactId>genericdao-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.2-SNAPSHOT</version>
 
     <name>Hibernate Generic DAO</name>
     <url>http://code.google.com/p/hibernate-generic-dao</url>
@@ -103,7 +103,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.7</version>
@@ -120,7 +120,21 @@
                     <show>protected</show>
                     <includePackageNames>com.googlecode</includePackageNames>
                 </configuration>
-            </plugin>
+            </plugin> -->
         </plugins>
     </build>
+    
+    <distributionManagement>
+        <repository>
+            <id>central</id>
+            <name>Nastooh releases</name>
+            <url>http://artifactory.nastooh.ir/artifactory/libs-release</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Nastooh snapshots</name>
+            <url>http://artifactory.nastooh.ir/artifactory/libs-snapshot</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
